# chat-app

./: .dockerignore  .travis.yml  Dockerfile  README.md  api.yaml  auth_test.go  docker-compose.yml  go.mod  go.sum  justfile  main.go  opentracing-integration.go  otel-collector-config.yaml  otel-docker.yaml  package-lock.json  testing_env.yaml
.github/workflows/: main.yml  test.yml
Postgres/: Dockerfile
Scylla/: Dockerfile
api/: swagger.yaml
app/: auth_test.go  authentication.go  chatroom.go  chatroom_test.go  client.go  invite_generation.go  log.go  state.go  user.go  validate.go
applog/: log.go
auth/: auth_test.go  authentication.go
cassandra_integration/: test_cassandra.go
chatroom/: chatroom.go  client.go  user.go
database/: database.go
desktop_client/: Cargo.toml
desktop_client/src/: main.rs  user.rs
desktop_client/src/widgets/: button.rs  mod.rs
desktop_client/src/widgets/scroll_widget/: mod.rs  scroll.rs  scroll_component.rs
frontend/: .dockerignore  Dockerfile  index.css  index.html  index.js  nginx.conf  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
frontend/chat/: index.html
frontend/css/: chat.css  login.css  signup.css
frontend/js/: chat.js  chat.jsx  signup.js
frontend/login/: index.html
frontend/signup/: index.html
scylla_integration/: test_scylla.go
src/: main.go
templates/: login.html  rooms.html  signup.html
validate/: validate.go
