[package]
name = "desktop_client"
version = "0.1.0"
authors = ["lazypassion <25536767+lazypassion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid", features = ["im"]}
reqwest = { version = "0.11.2", features = ["cookies", "gzip", "json", "multipart"] }
serde = "1"
tokio-tungstenite = "0.14.0"
tokio = { version = "1", features = ["io-util"]}
futures-util = "*"
serde_json = "1"
http = "0.2.3"
anyhow = "1"

[dependencies.async-std]
version = "1"
features = ["tokio1"]

[profile.dev.package."*"]
opt-level = 3
